--- a/src/Pages/Dashboard/components/Home/styles.module.scss
+++ b/src/Pages/Dashboard/components/Home/styles.module.scss
@@ -635,7 +635,7 @@ li::marker {
   }
 }
 
-@media (max-width: 1265px) {
+@media (max-width: 1280px) {
   .home--notification-links-underline {
     width: 100%;
   }
